# hexagonal-arch

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: configurations.py  main.py  usecases.py
app/.chroma/index/: id_to_uuid_230fb57b-87b1-4da2-868d-5285ae5e6af1.pkl  id_to_uuid_29e29f6f-57f8-4f25-a17b-95ac0ea6cfed.pkl  id_to_uuid_44ec50ba-6ea0-4c46-8cdf-b294bdde6956.pkl  id_to_uuid_4995afa4-337b-4672-b846-459b9d8aee61.pkl  index_metadata_230fb57b-87b1-4da2-868d-5285ae5e6af1.pkl  index_metadata_29e29f6f-57f8-4f25-a17b-95ac0ea6cfed.pkl  index_metadata_44ec50ba-6ea0-4c46-8cdf-b294bdde6956.pkl  index_metadata_4995afa4-337b-4672-b846-459b9d8aee61.pkl  uuid_to_id_230fb57b-87b1-4da2-868d-5285ae5e6af1.pkl  uuid_to_id_29e29f6f-57f8-4f25-a17b-95ac0ea6cfed.pkl  uuid_to_id_44ec50ba-6ea0-4c46-8cdf-b294bdde6956.pkl  uuid_to_id_4995afa4-337b-4672-b846-459b9d8aee61.pkl
app/Test/: Test.py
app/Test/integration/: test_integration.py
app/adapters/: chromadb_adapter.py  database_adapter.py  openai_adapter.py
app/api/: dependencies.py  routers.py
app/core/: models.py  ports.py
app/test/: pytest.py
app/test/testIntegration/: pytest_integration.py
tests/: test_usecases.py
